--- a/testing-report.yml
+++ b/testing-report.yml
@@ -57,7 +57,7 @@
 
 - summary: |
     Проверка кнопки навигации Previous на главной странице
-  status: pass
+  status: fail
   
 - summary: |
     Проверка отображения информации о товаре в карточке
