--- a/test-cases.yml
+++ b/test-cases.yml
@@ -155,7 +155,7 @@
     Должны быть выведены товары Res Lipstick, Beef Stesk, Dog Food
 
 - summary: |
-    Проверка невозможности ввода отрицательных чисел при фильтрации по ценге
+    Проверка невозможности ввода отрицательных чисел при фильтрации по цене
   requirement: |
     Отсутсвует возможность указать отрицательное число
   prerequisites: |
@@ -304,7 +304,7 @@
 - summary: |
     Проверка удаления товара из корзины
   requirement: |
-    В корзине должен отсутствовать товар
+    В корзине должен отсутствовать удаленный товар
   prerequisites: |
     Корзина должна быть пуста
     Открыта главная страница https://hexlet-products-store.vercel.app/
@@ -314,7 +314,7 @@
     - нажать на кнопку Cart
     - нажать на кнопку Delete у первого товара
   expected-result: |
-    В корзине должно остаться только один товар, сумма Total равна цене оставшегося товара
+    В корзине не должно быть первого товара, сумма Total равна цене оставшегося товара
 
 - summary: |
     Проверка увеличения счетчика корзины в шапке
